@@ -1,0 +1,6 @@
+$NetBSD: distinfo,v 1.1 2018/07/26 14:27:23 manu Exp $
+
+SHA1 (asciidir-0.6.tar.gz) = ea322d16e991de5da6c1ed8cdfad6ba29ad4b38f
+RMD160 (asciidir-0.6.tar.gz) = 469caef8356762e46d6a7aaff423016204631c99
+SHA512 (asciidir-0.6.tar.gz) = 67c8aca814ed0a9667040cf97c86bdcf99f492ae7fa8b2c5037b0bfad9c1bcf4fad1a077dd033ee7ff368db52691e6c16247e9195eea7dcc3d099570d70cb0d7
+Size (asciidir-0.6.tar.gz) = 137005 bytes
